--- a/test/Makefile
+++ b/test/Makefile
@@ -1,7 +1,8 @@
 
+DEBUG_FLAGS=-O0 -g -std=c++11 -I../include -I../../quickcheck/quickcheck
 
 cactus_basic: cactus-basic.cpp ../include/cactus-basic.hpp
-	g++ -O0 -g -std=c++11 -I../include -I../../quickcheck/quickcheck cactus-basic.cpp -o cactus-basic
+	g++ $(DEBUG_FLAGS) cactus-basic.cpp -o cactus-basic
 
 clean:
 	rm -f cactus-basic
